--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "postcss": "^8.4.16",
         "postcss-loader": "^7.0.1",
         "rimraf": "^3.0.2",
+        "tailwindcss": "^3.1.8",
         "terser-webpack-plugin": "^5.3.6",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.2",
