--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "scripts": {
         "clean": "rimraf dist/",
         "test": "tsc --noEmit",
-        "dev": "NODE_ENV=development webpack serve --config config/webpack.dev.ts",
-        "analyzer": "webpack --config config/webpack.analyzer.ts --progress",
-        "build:test": "npm run clean && NODE_ENV=production webpack --config config/webpack.test.ts",
-        "build:prod": "npm run clean && cross-env NODE_ENV=production webpack --config config/webpack.prod.ts",
+        "dev": "NODE_ENV=development webpack serve --config config/webpack.dev.js",
+        "analyzer": "webpack --config config/webpack.analyzer.js --progress",
+        "build:test": "npm run clean && NODE_ENV=production webpack --config config/webpack.test.js",
+        "build:prod": "npm run clean && cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
         "lint": "eslint src/"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.5",
         "react": "^18.2.0",
@@ -37,13 +37,15 @@
         "css-loader": "^6.7.1",
         "dotenv-webpack": "^8.0.1",
         "html-webpack-plugin": "^5.5.0",
+        "less": "^4.1.3",
+        "less-loader": "^11.1.0",
         "mini-css-extract-plugin": "^2.6.1",
         "postcss": "^8.4.16",
         "postcss-loader": "^7.0.1",
         "rimraf": "^3.0.2",
         "tailwindcss": "^3.1.8",
         "terser-webpack-plugin": "^5.3.6",
-        "ts-node": "^10.9.1",
+        "ts-loader": "^9.4.2",
         "typescript": "^4.8.2",
         "webpack": "^5.74.0",
         "webpack-bundle-analyzer": "^4.6.1",
