--- a/package.json
+++ b/package.json
@@ -16,41 +16,37 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@reduxjs/toolkit": "^1.8.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-redux": "^8.0.2"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.18.13",
-        "@babel/plugin-transform-runtime": "^7.18.10",
+        "@babel/core": "^7.21.8",
+        "@babel/plugin-transform-runtime": "^7.21.4",
         "@shm-open/eslint-config-bundle": "^1.9.13",
         "@types/dotenv-webpack": "^7.0.3",
-        "@types/node": "^18.7.14",
-        "@types/react": "^18.0.18",
-        "@types/react-dom": "^18.0.6",
-        "autoprefixer": "^10.4.8",
-        "babel-loader": "^8.2.5",
+        "@types/react": "^18.2.6",
+        "@types/react-dom": "^18.2.4",
+        "autoprefixer": "^10.4.14",
+        "babel-loader": "^8.3.0",
         "babel-preset-react-app": "^10.0.1",
-        "core-js": "^3.25.0",
+        "core-js": "^3.30.2",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.7.1",
+        "css-loader": "^6.7.3",
         "dotenv-webpack": "^8.0.1",
-        "html-webpack-plugin": "^5.5.0",
+        "html-webpack-plugin": "^5.5.1",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
-        "mini-css-extract-plugin": "^2.6.1",
-        "postcss": "^8.4.16",
-        "postcss-loader": "^7.0.1",
+        "mini-css-extract-plugin": "^2.7.5",
+        "postcss": "^8.4.23",
+        "postcss-loader": "^7.3.0",
         "rimraf": "^3.0.2",
-        "tailwindcss": "^3.1.8",
-        "terser-webpack-plugin": "^5.3.6",
-        "ts-loader": "^9.4.2",
-        "typescript": "^4.8.2",
-        "webpack": "^5.74.0",
-        "webpack-bundle-analyzer": "^4.6.1",
+        "tailwindcss": "^3.3.2",
+        "terser-webpack-plugin": "^5.3.8",
+        "typescript": "^4.9.5",
+        "webpack": "^5.82.1",
+        "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.10.1"
+        "webpack-dev-server": "^4.15.0"
     },
     "browserslist": [
         "> 2%",
