--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "lib": ["DOM"],
+        "lib": ["DOM", "ES2015"],
         "jsx": "react-jsx",
         "target": "es6",
         "module": "esnext",
